--- a/main.css
+++ b/main.css
@@ -8,7 +8,7 @@ html, body {
 body {
   width: 100%;
   height: 100vh;
-  background: url('assets/pexels-marco-milanesi-2670898.jpg') no-repeat center;
+  background: url('assets/pexels-marco-milanesi-2670898.jpg') no-repeat center center fixed;
   background-size: cover;
 }
 
@@ -22,10 +22,13 @@ body {
 .quote {
   font-family: "Noto Sans", sans-serif;
   font-size: 2.5rem;
+  color: azure;
+  text-transform: uppercase;
 }
 
 .author {
   font-family: "Noto Serif", serif;
-  font-size: 1.5rem;
+  font-size: 28px;
   font-style: italic;
+  color: azure;
 }
