add latest file structrure

--- a/main.css
+++ b/main.css
@@ -8,7 +8,7 @@ html, body {
 body {
   width: 100%;
   height: 100vh;
-  background: url('assets/pexels-marco-milanesi-2670898.jpg') no-repeat center center fixed;
+  background: url('assets/pexels-hristo-fidanov-1252869.jpg') no-repeat center;
   background-size: cover;
 }
 
